Just starting out

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <header>
         <ul>
-            <li></li>
-            <li></li>
+            <li>VORTEX PROJECT</li>
+            <li>VOTE INVITE</li>
         </ul>
     </header>
 </body>
+<div></div>
 </html>
