Icon and background image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vortex</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Vortex.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -14,6 +15,16 @@
             <li>VOTE INVITE</li>
         </ul>
     </header>
+    <div class="body">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, provident nostrum dolorum, sint recusandae autem ullam voluptas, debitis vitae voluptate ab unde praesentium officia repudiandae mollitia suscipit id nihil quam aperiam incidunt dolorem quidem quisquam non similique. Porro aliquid fuga sit, minus obcaecati quos maxime. Amet nisi sunt saepe quis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, provident nostrum dolorum, sint recusandae autem ullam voluptas, debitis vitae voluptate ab unde praesentium officia repudiandae mollitia suscipit id nihil quam aperiam incidunt dolorem quidem quisquam non similique. Porro aliquid fuga sit, minus obcaecati quos maxime. Amet nisi sunt saepe quis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, provident nostrum dolorum, sint recusandae autem ullam voluptas, debitis vitae voluptate ab unde praesentium officia repudiandae mollitia suscipit id nihil quam aperiam incidunt dolorem quidem quisquam non similique. Porro aliquid fuga sit, minus obcaecati quos maxime. Amet nisi sunt saepe quis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, provident nostrum dolorum, sint recusandae autem ullam voluptas, debitis vitae voluptate ab unde praesentium officia repudiandae mollitia suscipit id nihil quam aperiam incidunt dolorem quidem quisquam non similique. Porro aliquid fuga sit, minus obcaecati quos maxime. Amet nisi sunt saepe quis.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, provident nostrum dolorum, sint recusandae autem ullam voluptas, debitis vitae voluptate ab unde praesentium officia repudiandae mollitia suscipit id nihil quam aperiam incidunt dolorem quidem quisquam non similique. Porro aliquid fuga sit, minus obcaecati quos maxime. Amet nisi sunt saepe quis.
+            
+        </p>
+    </div>
 </body>
 <div></div>
 </html>
