Menu buttons are starting to look ok

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <div class="header">VORTEX PROJECT</div>
-        <div class="header">
-            <button class="header">VOTE</button>
-            <button class="header">INVITE</button>
+        <div class="headerTitle">VORTEX PROJECT</div>
+        <div class="headerMenu">
+            <button class="headerMenu">VOTE</button>
+            <button class="headerMenu">INVITE</button>
         </div>
     </header>
-    <div class="body">
-        <div>
+    <div class="contentColumn">
+        <div class="sideNavigation">
             <button class="sideNavigation">Home</button>
             <button class="sideNavigation">Commands</button>
             <button class="sideNavigation">About us</button>
