--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <div class="headerTitle">VORTEX PROJECT</div>
+        <a class="headerTitle" href="index.html">VORTEX PROJECT</a>
         <div class="headerMenu">
-            <button class="headerMenu">VOTE</button>
-            <button class="headerMenu">INVITE</button>
+            <a class="headerMenu">VOTE</a>
+            <a class="headerMenu">INVITE</a>
         </div>
     </header>
     <div class="contentArea">
@@ -22,9 +22,25 @@
             <a href="commands.html" class="sideNavigation">Commands</a>
             <a href="aboutUs.html" class="sideNavigation">About us</a>
         </div>
-        <div class="mainContentFlex">
-            <div class="mainContentText"></div>
-            <div class="mainContentImage"></div>
+        <div class="mainContentFlexLeft">
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
+            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
+            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
+            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
+            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+        </div>
+        <div class="mainContentFlexRight">
+            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
+            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
+            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
+            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
         </div>
     </div>
 </body>
