Vote har nu en sida med rolig interaction

--- a/commands.html
+++ b/commands.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <div class="headerTitle">VORTEX PROJECT</div>
+        <a class="headerTitle" href="index.html">VORTEX PROJECT</a>
         <div class="headerMenu">
-            <button class="headerMenu">VOTE</button>
-            <button class="headerMenu">INVITE</button>
+            <a class="headerMenu" href="vote.html">VOTE</a>
+            <a class="headerMenu">INVITE</a>
         </div>
     </header>
     <div class="contentArea">
@@ -33,5 +33,4 @@
         </div>
     </div>
 </body>
-<div></div>
 </html>
