--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <a class="headerTitle" href="index.html">VORTEX PROJECT</a>
         <div class="headerMenu">
-            <a class="headerMenu">VOTE</a>
+            <a class="headerMenu" href="vote.html">VOTE</a>
             <a class="headerMenu">INVITE</a>
         </div>
     </header>
@@ -44,5 +44,4 @@
         </div>
     </div>
 </body>
-<div></div>
 </html>
