--- a/commands.html
+++ b/commands.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Vortex.png" type="image/x-icon">
 </head>
-<body>
+<body style="transform: rotate(-1deg);">
     <header>
         <a class="headerTitle" href="index.html">VORTEX PROJECT</a>
         <div class="headerMenu">
             <a class="headerMenu" href="vote.html">VOTE</a>
-            <a class="headerMenu">INVITE</a>
+            <a class="headerMenu" href="https://discord.com/api/oauth2/authorize?client_id=541237203284787211&permissions=536870387671&scope=bot" target="_blank">INVITE</a>
         </div>
     </header>
     <div class="contentArea">
