--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="headerTitle" href="index.html">VORTEX PROJECT</a>
         <div class="headerMenu">
             <a class="headerMenu" href="vote.html">VOTE</a>
-            <a class="headerMenu">INVITE</a>
+            <a class="headerMenu" href="https://discord.com/api/oauth2/authorize?client_id=541237203284787211&permissions=536870387671&scope=bot" target="_blank">INVITE</a>
         </div>
     </header>
     <div class="contentArea">
@@ -23,23 +23,23 @@
             <a href="aboutUs.html" class="sideNavigation">About us</a>
         </div>
         <div class="mainContentFlexLeft">
-            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
-            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <div class="mainContentText">Moderate inapropriet language using the profanity filter!!!</div>
+            <img class="mainContentImage" src="coinFlip.png" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
-            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <img class="mainContentImage" src="coinFlip.png" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
-            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <img class="mainContentImage" src="coinFlip.png" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
-            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <img class="mainContentImage" src="coinFlip.png" width="100%">
         </div>
         <div class="mainContentFlexRight">
             <img class="mainContentImage" src="languageCorrection.png" width="100%">
-            <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
-            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <div class="mainContentText">Flip a coin any time for all intents and purposes with the coin flipper!!!</div>
+            <img src="languageCorrection.png" class="mainContentImage">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
             <img class="mainContentImage" src="languageCorrection.png" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
-            <div class="mainContentImage">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, ad.</div>
+            <img class="mainContentImage" src="languageCorrection.png" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
         </div>
     </div>
