--- a/vote.html
+++ b/vote.html
@@ -13,7 +13,7 @@
         <a class="headerTitle" href="index.html">VORTEX PROJECT</a>
         <div class="headerMenu">
             <a class="headerMenu" href="vote.html">VOTE</a>
-            <a class="headerMenu">INVITE</a>
+            <a class="headerMenu" href="https://discord.com/api/oauth2/authorize?client_id=541237203284787211&permissions=536870387671&scope=bot" target="_blank">INVITE</a>
         </div>
     </header>
     <div class="contentArea">
