Added alt texts

--- a/vote.html
+++ b/vote.html
@@ -25,10 +25,10 @@
         <div class="voteGrid">
             <h1>PLEASE VOTE FOR OUR BOT</h1>
             <div class="thumbsUp">
-                <img class="thumbsUp" src="thumbsUp.png">
+                <img class="thumbsUp" alt="image displaying a thumbs up" src="thumbsUp.png">
             </div>
             <div class="thumbsDown">
-                <img class="thumbsDown" src="thumbsDown.png">
+                <img class="thumbsDown" alt="image displaying a thumbs down" src="thumbsDown.png">
             </div>
         </div>
     </div>
