--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         </div>
         <div class="mainContentFlexLeft">
             <div class="mainContentText">Moderate inapropriet language using the profanity filter!!!</div>
-            <img class="mainContentImage" src="coinFlip.png" width="100%">
+            <img class="mainContentImage" src="coinFlip.png" alt="Image displaying a bot flipping a coin" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
-            <img class="mainContentImage" src="coinFlip.png" width="100%">
+            <img class="mainContentImage" src="coinFlip.png" alt="Image displaying a bot flipping a coin" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
-            <img class="mainContentImage" src="coinFlip.png" width="100%">
+            <img class="mainContentImage" src="coinFlip.png" alt="Image displaying a bot flipping a coin" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
-            <img class="mainContentImage" src="coinFlip.png" width="100%">
+            <img class="mainContentImage" src="coinFlip.png" alt="Image displaying a bot flipping a coin" width="100%">
         </div>
         <div class="mainContentFlexRight">
-            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <img class="mainContentImage" src="languageCorrection.png" alt="Image displaying a bot calling out foul language" width="100%">
             <div class="mainContentText">Flip a coin any time for all intents and purposes with the coin flipper!!!</div>
             <img src="languageCorrection.png" class="mainContentImage">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
-            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <img class="mainContentImage" src="languageCorrection.png" alt="Image displaying a bot calling out foul language" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
-            <img class="mainContentImage" src="languageCorrection.png" width="100%">
+            <img class="mainContentImage" src="languageCorrection.png" alt="Image displaying a bot calling out foul language" width="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
         </div>
     </div>
