--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="mainContentFlexRight">
             <img class="mainContentImage" src="languageCorrection.png" alt="Image displaying a bot calling out foul language" width="100%" height="100%">
             <div class="mainContentText">Moderate inappropriate language using the profanity filter!!!</div>
-            <img src="languageCorrection.png" alt="Image displaying a bot calling out foul language" class="mainContentImage">
+            <img src="languageCorrection.png" alt="Image displaying a bot calling out foul language" class="mainContentImage" width="100%" height="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus maxime nemo quos, delectus placeat facilis perspiciatis ea nulla at vero pariatur autem ab laborum velit sequi numquam sed. Praesentium autem consectetur provident quisquam culpa beatae est magnam illo quia?</div>
             <img class="mainContentImage" src="languageCorrection.png" alt="Image displaying a bot calling out foul language" width="100%" height="100%">
             <div class="mainContentText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis labore debitis laudantium, ut incidunt, tempore molestiae hic officia pariatur asperiores inventore quibusdam cumque dolorem esse. Consectetur fugiat voluptas dolor aliquid ex ipsum autem minus, nisi minima quibusdam, itaque veniam odit expedita, nihil blanditiis debitis adipisci excepturi. Repellendus ad qui error.</div>
